package br.unitins.tp1.faixas.EnderecoEntrega.model;

import br.unitins.tp1.faixas.Cidade.model.Cidade;
import br.unitins.tp1.faixas.Cliente.service.DefaultEntity.model.DefaultEntity;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.JoinColumn;
import jakarta.persistence.ManyToOne;

@Entity
public class EnderecoEntrega extends DefaultEntity {
    @Column
    private String logradouro;
    @Column
    private String bairro;
    @Column(nullable = false, unique = true)
    private String cep;

    @ManyToOne
    @JoinColumn(name="id_cidade")
    private Cidade cidade;


    public String getLogradouro() {
        return logradouro;
    }
    public void setLogradouro(String logradouro) {
        this.logradouro = logradouro;
    }
    public String getBairro() {
        return bairro;
    }
    public void setBairro(String bairro) {
        this.bairro = bairro;
    }
    public String getCep() {
        return cep;
    }
    public void setCep(String cep) {
        this.cep = cep;
    }
    public Cidade getCidade() {
        return cidade;
    }
    public void setCidade(Cidade cidade) {
        this.cidade = cidade;
    }
    

    
}
